feat(Task-5): Extra - add product delete FE/BE integration
